[package]
name = "rillrate-system"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
description = "RillRate agent for system monitoring."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.41"
derive_more = "0.99.14"
rill-engine = { version = "0.30.0-alpha.4", optional = true }
rill-protocol = "0.30.0-alpha.4"
serde = "1.0.126"
#vectorize = "0.1.0"

[features]
default-features = ["rill-engine"]
